# Comparisons.PostgreSQLVSDoublets

./: .gitignore  .gitkeep  .gitmodules  CLAUDE.md  README.md  docker-compose.doublets-gql.yml  docker-compose.postgresql-hasura.yml  run-benchmarks.sh
.github/workflows/: cpp.yml  graphql-benchmark.yml  rust.yml
bench/: schema-mapping.md
bench/doublets/: run.sh
bench/pg/: run.sh
benchmarks/: process-results.py
benchmarks/k6/: common.js  doublets-benchmark.js  hasura-benchmark.js
cpp/: CMakeLists.txt  Client.h  LinksPSQL.h  PSQLBench.cpp  Transaction.h  conanfile.txt  out.py
cpp/Benchmarks/: AllBenchmarks.cpp  Create.cpp  CreatePoints.cpp  CreateThousandPoints.cpp  Delete.cpp  DeleteLinks.cpp  EachLink.cpp  SetupTeardown.cpp  Update.cpp  UpdateLinks.cpp
cpp/Benchmarks/Each/: All.cpp  Concrete.cpp  Identity.cpp  Incoming.cpp  Outgoing.cpp
cpp/LinksPSQL/: Client.h  ISQL.h  PSQLBase.h  PostgreSQL.h  Transaction.h
docker/: compose.embedded.yml  docker-compose.yml
docker/init/: 01_download_demo.sh  99_unlogged.sql
docs/: HOWTO.md
docs/case-studies/issue-15/: README.md
docs/case-studies/issue-23/: README.md
doublets-gql/: Dockerfile
graphql/: README.md  schema.graphql
postgresql-hasura/: hasura-metadata.json  init.sql
rust/: Cargo.toml  out.py
rust/benches/: bench.rs  create.rs  delete.rs  update.rs
rust/benches/benchmarks/: create.rs  delete.rs  mod.rs  update.rs
rust/benches/benchmarks/doublets/: create.rs  delete.rs  mod.rs  update.rs
rust/benches/benchmarks/doublets/each/: all.rs  concrete.rs  identity.rs  incoming.rs  mod.rs  outgoing.rs
rust/benches/benchmarks/each/: all.rs  concrete.rs  identity.rs  incoming.rs  mod.rs  outgoing.rs
rust/benches/benchmarks/psql/: create.rs  delete.rs  mod.rs  update.rs
rust/benches/benchmarks/psql/each/: all.rs  concrete.rs  identity.rs  incoming.rs  mod.rs  outgoing.rs
rust/benches/each/: identity.rs  incoming.rs  mod.rs
rust/src/: bench.rs  benched.rs  client.rs  cruds.rs  exclusive.rs  fork.rs  lib.rs  links_client.rs  links_transaction.rs  linksclient.rs  linkspsql.rs  linkstransaction.rs  main.rs  make_bench.rs  transaction.rs
rust/src/benched/: doublets_benched.rs  mod.rs  psql_benched.rs
rust/tests/: test.rs
sql/: 10_timetable_queries.sql
