cmake_minimum_required(VERSION 3.20)
project(PSQLBench)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(TARGETS)

set(LINKS_PLATFORM_EXTRA_FLAGS "" CACHE STRING "Extra compiler flags")
list(APPEND LINKS_PLATFORM_EXTRA_FLAGS ${CONAN_USER_PLATFORM.HASHING_suggested_flags})

add_library(${PROJECT_NAME}.Library INTERFACE)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::gtest)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::benchmark)
#target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::platform.data)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::platform.ranges)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::platform.setters)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::platform.collections.methods)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::platform.threading)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::mio)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::platform.memory)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::platform.exceptions)
#target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::platform.interfaces)
target_link_libraries(${PROJECT_NAME}.Library INTERFACE CONAN_PKG::libpqxx)
target_include_directories(${PROJECT_NAME}.Library INTERFACE LinksPSQL)
target_include_directories(${PROJECT_NAME}.Library INTERFACE ${CMAKE_CURRENT_LIST_DIR}/../Data.Doublets/cpp/Platform.Data.Doublets)
target_include_directories(${PROJECT_NAME}.Library INTERFACE ${CMAKE_CURRENT_LIST_DIR}/../Data/cpp/Platform.Data)
target_include_directories(${PROJECT_NAME}.Library INTERFACE ${CMAKE_CURRENT_LIST_DIR}/../Interfaces/cpp/Platform.Interfaces)

target_compile_options(${PROJECT_NAME}.Library INTERFACE ${LINKS_PLATFORM_EXTRA_FLAGS})

add_executable(${PROJECT_NAME} Benchmarks/AllBenchmarks.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}.Library)

set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20)
target_link_options(${PROJECT_NAME} INTERFACE -lpqxx -lpq)
