[package]
name = "linkspsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
tokio-postgres = "0.7.6"
criterion = { version = "0.3.5", features = ["async_tokio"]}
platform-data = "0.1.0-alpha.0"

[[bench]]
name = "bench"
harness = false
