[package]
name = "linkspsql"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[dependencies]
postgres = { version = "0.19.5" }
tokio = { version = "1.29.1", features = ["full"] }
doublets = { git = "https://github.com/linksplatform/doublets-rs.git" }

[dev-dependencies]
criterion = "=0.4.0"